fix scrollbar && add video sidebar and footer && add ability to play and stop video

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,16 @@
   margin: 0;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  background-color: rgba(255,255,255,0.0);
+}
+
 body {
   margin: 0;
+  position: fixed;
+  width: 100%;
+  overflow-y: scroll;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
